doc: lacked chromium invocation to allow file access

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -1,3 +1,4 @@
+<!-- call: chromium-browser --allow-file-access-from-files -->
 <script src="./marvinj-1.0.js"></script>
 <script src="./index.js"></script>
 <div >
